--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
+#for env
 python-dotenv==1.0.0
 openai==1.3.0
 PyPDF2==3.0.1
 python-docx==1.1.0
 requests==2.31.0
+
+#for API
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+pydantic>=2.0.0
